I added an image

--- a/td-html-basics/index.html
+++ b/td-html-basics/index.html
@@ -17,7 +17,7 @@
 
     <br>
 
-    <img src="Robot.jpg" alt="Pixabay image">
+    <img src="Assets/Robot.jpg" alt="Pixabay image">
 
     <body>
         
