--- a/td-html-basics/index.html
+++ b/td-html-basics/index.html
@@ -6,6 +6,8 @@
 
     <h1><h1>We Provide Top Notch Technology Solution</h1>
 
+    <head>
+
     <body>
         
 
@@ -21,7 +23,8 @@
 
     <body>
         
-    <html></html>
+    <html>
+
 
 
 
